--- a/tailwind.css
+++ b/tailwind.css
@@ -6,6 +6,67 @@
   position: absolute
 }
 
+.relative {
+  position: relative
+}
+
+.top-52 {
+  top: 13rem
+}
+
+.left-5 {
+  left: 1.25rem
+}
+
+.right-5 {
+  right: 1.25rem
+}
+
+.left-32 {
+  left: 8rem
+}
+
+.right-32 {
+  right: 8rem
+}
+
+.left-8 {
+  left: 2rem
+}
+
+.right-8 {
+  right: 2rem
+}
+
+.bottom-0 {
+  bottom: 0px
+}
+
+.top-0 {
+  top: 0px
+}
+
+.bottom-10 {
+  bottom: 2.5rem
+}
+
+.left-10 {
+  left: 2.5rem
+}
+
+.right-10 {
+  right: 2.5rem
+}
+
+.z-10 {
+  z-index: 10
+}
+
+.mx-10 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem
+}
+
 .mt-3 {
   margin-top: 0.75rem
 }
@@ -22,8 +83,20 @@
   width: 100%
 }
 
+.w-1\/2 {
+  width: 50%
+}
+
 .flex-col {
   flex-direction: column
+}
+
+.items-center {
+  align-items: center
+}
+
+.justify-center {
+  justify-content: center
 }
 
 .rounded-md {
@@ -43,6 +116,10 @@
   padding: 1rem
 }
 
+.p-2 {
+  padding: 0.5rem
+}
+
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem
@@ -55,6 +132,10 @@
 
 .pt-10 {
   padding-top: 2.5rem
+}
+
+.text-center {
+  text-align: center
 }
 
 .text-lg {
